fix: GUI text Z offset